--- a/src/data/make_coco.ipynb
+++ b/src/data/make_coco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### VOC box (xmin,ymin,xmax,ymax) to COCO box (xmin,ymax, box-width(xmax-xmin), box-height(ymax-ymin))"
+    "### VOC box (xmin,ymin,xmax,ymax) to COCO box (xmin,ymin, box-width(xmax-xmin), box-height(ymax-ymin))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +50,13 @@
     "json_data['images'] = []\n",
     "json_data['annotations'] = []\n",
     "\n",
-    "with open('../../runs/make_coco/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
+    "with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
     "    json.dump(json_data, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "with open('../../runs/make_coco/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'r', encoding='utf-8') as file:\n",
+    "with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'r', encoding='utf-8') as file:\n",
     "    json_data = json.load(file)\n",
     "\n",
     "print(f\"{dataset_type[dataset_type_num][:-1]} 개수 : {len(ann_files)}\")\n",
@@ -93,11 +93,11 @@
     "\n",
     "    json_data['images'].append({'id':id,'file_name':xml_file[:-4]+'.jpg','width':width,'height':height,'date_captured':'2022/3/28',\n",
     "    'license':1,'coco_url':'','flickr_url':''})\n",
-    "    json_data['annotations'].append({'id':anno_id,'image_id':id,'category_id':1,'iscrowd':0,'area':'','bbox':[xmin,ymax,xmax-xmin,ymax-ymin],'segmentation':[]})\n",
+    "    json_data['annotations'].append({'id':anno_id,'image_id':id,'category_id':1,'iscrowd':0,'area':0,'bbox':[xmin,ymin,xmax-xmin,ymax-ymin],'segmentation':[]})\n",
     "    id += 1\n",
     "    anno_id += 1\n",
     "\n",
-    "with open('../../runs/make_coco/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
+    "with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
     "    json.dump(json_data, file)\n",
     "print(f\"make {dataset_type[dataset_type_num][:-1]}.json end\")"
    ]
@@ -107,9 +107,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
