make fpn & efficientNet

--- a/src/data/make_coco.ipynb
+++ b/src/data/make_coco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_path = os.path.expanduser(\"~/Desktop/joo/data/nest/origin/\")\n",
     "dataset_type = [\"train/\",\"val/\",\"test/\"]\n",
-    "dataset_type_num = 1\n",
+    "dataset_type_num = 0\n",
     "\n",
     "IMAGE_FOLDER = \"JPEGImages\"\n",
     "ANNOTATIONS_FOLDER = \"Annotations\"\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val 개수 : 312\n",
-      "make val.json end\n"
+      "train 개수 : 5974\n",
+      "make train.json end\n"
      ]
     }
    ],
