--- a/src/model/fpn/efficientNet.ipynb
+++ b/src/model/fpn/efficientNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading http://ai.stanford.edu/~acoates/stl10/stl10_binary.tar.gz to /home/joo/Desktop/joo/data/nest/stl10/stl10_binary.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting /home/joo/Desktop/joo/data/nest/stl10/stl10_binary.tar.gz to /home/joo/Desktop/joo/data/nest/stl10/\n",
-      "Files already downloaded and verified\n",
       "5000\n",
       "8000\n"
      ]
@@ -71,8 +55,8 @@
     "    os.mkdir(path2data)\n",
     "\n",
     "# load dataset\n",
-    "train_ds = datasets.STL10(path2data, split='train', download=True, transform=transforms.ToTensor())\n",
-    "val_ds = datasets.STL10(path2data, split='test', download=True, transform=transforms.ToTensor())\n",
+    "train_ds = datasets.STL10(path2data, split='train', download=False, transform=transforms.ToTensor())\n",
+    "val_ds = datasets.STL10(path2data, split='test', download=False, transform=transforms.ToTensor())\n",
     "\n",
     "print(len(train_ds))\n",
     "print(len(val_ds))"
@@ -80,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
