--- a/src/model/fpn/fpn.ipynb
+++ b/src/model/fpn/fpn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import torch.nn.functional as F\n",
     "\n",
     "from torch.autograd import Variable\n",
-    "from torchinfo import summary"
+    "from torchinfo import summary\n",
+    "from torchviz import make_dot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +267,6 @@
     "def test():\n",
     "    net = FPN101().cuda()\n",
     "    print(summary(net,(1,3,512,512)))\n",
-    "    # 1. 임의의 model을 사용해도 되며, 실제 사용하는 custom model을 불러와서 저장해 보시기 바랍니다.\n",
     "    \n",
     "    # 2. model의 파라미터를 OrderedDict 형태로 저장합니다.\n",
     "    params = net.state_dict()\n",
@@ -281,6 +281,8 @@
     "    fms = net(Variable(torch.randn(1,3,512,512)))\n",
     "    for fm in fms:\n",
     "        print(fm.size())\n",
+    "    \n",
+    "\n",
     "\n",
     "test()"
    ]
