make test dataset

--- a/src/data/make_coco.ipynb
+++ b/src/data/make_coco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_path = os.path.expanduser(\"~/Desktop/joo/data/nest/origin/\")\n",
     "dataset_type = [\"train/\",\"val/\",\"test/\"]\n",
-    "dataset_type_num = 0\n",
+    "dataset_type_num = 2\n",
     "\n",
     "IMAGE_FOLDER = \"JPEGImages\"\n",
     "ANNOTATIONS_FOLDER = \"Annotations\"\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,28 +49,31 @@
     "json_data['categories'] = [{\"id\": 1, \"name\": \"nest\", \"supercategory\": \"None\"}]\n",
     "json_data['images'] = []\n",
     "json_data['annotations'] = []\n",
-    "\n",
-    "with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
-    "    json.dump(json_data, file)"
+    "with open(os.path.expanduser('~/Downloads/instance_')+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
+    "    json.dump(json_data, file)\n",
+    "# with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
+    "#     json.dump(json_data, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train 개수 : 5974\n",
-      "make train.json end\n"
+      "test 개수 : 417\n",
+      "make test.json end\n"
      ]
     }
    ],
    "source": [
-    "with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'r', encoding='utf-8') as file:\n",
+    "with open(os.path.expanduser('~/Downloads/instance_')+dataset_type[dataset_type_num][:-1]+'2022.json', 'r', encoding='utf-8') as file:\n",
     "    json_data = json.load(file)\n",
+    "# with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'r', encoding='utf-8') as file:\n",
+    "#     json_data = json.load(file)\n",
     "\n",
     "print(f\"{dataset_type[dataset_type_num][:-1]} 개수 : {len(ann_files)}\")\n",
     "\n",
@@ -96,9 +99,10 @@
     "    json_data['annotations'].append({'id':anno_id,'image_id':id,'category_id':1,'iscrowd':0,'area':0,'bbox':[xmin,ymin,xmax-xmin,ymax-ymin],'segmentation':[]})\n",
     "    id += 1\n",
     "    anno_id += 1\n",
-    "\n",
-    "with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
+    "with open(os.path.expanduser('~/Downloads/instance_')+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
     "    json.dump(json_data, file)\n",
+    "# with open('../../runs/annotations/instance_'+dataset_type[dataset_type_num][:-1]+'2022.json', 'w', encoding='utf-8') as file:\n",
+    "#     json.dump(json_data, file)\n",
     "print(f\"make {dataset_type[dataset_type_num][:-1]}.json end\")"
    ]
   },
