make custom dataset

--- a/src/data/make_korad.ipynb
+++ b/src/data/make_korad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "            print(f\"[Warning!] folder {number} have already done!\\n======================================\")\n",
     "            break\n",
     "\n",
-    "        os.rename(path+file,path+file[:-9]+\"json\")"
+    "        # os.rename(path+file,path+file[:-9]+\"json\")"
    ]
   },
   {
@@ -63,23 +63,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c1_ano : 2993, c1_img : 3900\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3900it [00:00, 422245.37it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "path,_,c1_files = next(os.walk(os.path.join(c1_path+\"annotation/\")))\n",
+    "path,_,c1_files = next(os.walk(os.path.join(c1_path+\"annotation/\"))) # annotation, json\n",
     "c1_files.sort()\n",
     "\n",
     "img_path,_,c1_img_files = next(os.walk(os.path.join(c1_path+\"images/\")))\n",
     "c1_img_files.sort()\n",
     "\n",
     "print(f\"c1_ano : {len(c1_files)}, c1_img : {len(c1_img_files)}\")\n",
-    "empty_list = []\n",
+    "empty_list = {}\n",
     "\n",
     "for index, file in tqdm(enumerate(c1_img_files)):\n",
-    "    if os.path.exists(path+file[:-4]+\".xml\") == False:\n",
-    "        empty_list.append(file)\n",
-    "        continue    \n",
+    "\n",
+    "    if os.path.exists(path+\"C1\"+file[file.index('_'):-4]+\".xml\") == False:\n",
+    "        empty_list[file[:-4]] = [\"01\",file, file[:-4]+\".xml\"]\n",
+    "        continue\n",
+    "    \n",
+    "    # if os.path.exists(path+file[:-4]+\".json\") == False:\n",
+    "    #     empty_list[file[:-4]] = [\"01\",file, file[:-4]+\".json\"]\n",
+    "    #     continue\n",
+    "\n",
+    "    continue # 제거하면 json 파일 만듬\n",
     "    file = file[:-4]+\".xml\"\n",
     "    root = Et.parse(open(os.path.join(path, file), \"r\")).getroot()\n",
     "\n",
@@ -111,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -124,12 +146,13 @@
    ],
    "source": [
     "print(f\"짝 안맞는 파일 개수 : {len(empty_list)}\")\n",
-    "# print(empty_list)"
+    "with open(os.path.expanduser(\"./korad_boxes/error_list2.json\"), 'w', encoding='utf-8') as f:\n",
+    "    json.dump(empty_list,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[175 177 177]\n",
-      "\n",
-      "[175 177 177]\n",
-      "[ True  True  True]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(manager_img[0][10])\n",
     "print()\n",
