--- a/src/data/show_korad.ipynb
+++ b/src/data/show_korad.ipynb
@@ -2,91 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "import shutil\n",
     "import cv2\n",
     "import json\n",
     "import random\n",
-    "random.seed(77)\n"
+    "random.seed(77)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# data hunt format(4 points[x,y])\n",
     "json_dir_name = os.path.expanduser(\"~/Desktop/joo/data/korad/data/labeling/\")\n",
     "tiff_dir_name = os.path.expanduser(\"~/Desktop/joo/data/korad/data/images/\")\n",
     "save_dir = \"./korad_boxes\"\n",
-    "cwd = os.getcwd()"
+    "\n",
+    "numbers = os.listdir(tiff_dir_name)\n",
+    "numbers.sort()\n",
+    "\n",
+    "all_dict = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def json_name_check(img_id, json_list):\n",
-    "    # print(json_list)\n",
-    "    for idx, json_name in enumerate(json_list) :\n",
-    "        if img_id in json_name:\n",
-    "            return idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/6 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "03\n",
-      "/home/joo/Desktop/joo/data/korad/data/labeling/03\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "IsADirectoryError",
-     "evalue": "[Errno 21] Is a directory: '/home/joo/Desktop/joo/data/korad/data/labeling/03'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIsADirectoryError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-2260c02a1b54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mtarget_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_dir_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjson_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbox_j\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0mcjson\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbox_j\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: '/home/joo/Desktop/joo/data/korad/data/labeling/03'"
-     ]
-    }
-   ],
-   "source": [
-    "# img_list = os.listdir(os.path.join(dir_name, \"JPEGImages\"))\n",
-    "img_list = os.listdir(tiff_dir_name)\n",
-    "json_list = os.listdir(json_dir_name)\n",
-    "# json_list = os.listdir(os.path.join(json_dir_name, \"Annotations\"))\n",
     "classes = ['AlligatorCrack', 'ConcreteCrack', 'Spalling', 'Efflorescene', 'Exposure']\n",
     "\n",
     "colors = []\n",
@@ -95,42 +43,222 @@
     "    rd2 = random.randint(0, 256)\n",
     "    rd3 = random.randint(0, 256)\n",
     "    rd_color = (rd1, rd2, rd3)\n",
-    "    colors.append(rd_color)\n",
+    "    colors.append(rd_color)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "labeling 이랑 image랑 file 명 맞춰서 dictionary 담기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for number in numbers:\n",
     "\n",
-    "for img_id in tqdm(img_list):\n",
+    "    json_root,_,json_list = next(os.walk(os.path.join(json_dir_name+number)))\n",
+    "    tiff_root,_,tiff_list = next(os.walk(os.path.join(tiff_dir_name+number)))    \n",
+    "    json_list.sort()\n",
+    "    tiff_list.sort()\n",
     "\n",
-    "    data_id = img_id.split(\".tiff\")[0]\n",
-    "    json_name = data_id + \".jpeg\" + \".json\"\n",
+    "    pair_dict = {}\n",
+    "    for index, tiff_file in enumerate(tiff_list):\n",
+    "        index += 1\n",
+    "        for json_file in json_list:\n",
+    "            if json_file.find(tiff_file[:-5]) == -1 : continue\n",
+    "            pair_dict[tiff_file] = [json_file,\"C\"+number+\"_\"+str(index).zfill(5)]\n",
+    "            \n",
+    "    all_dict.append(pair_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1번 폴더를 제외한 나머지 폴더 3900개 맞아야 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3900 check!!\n",
+    "for i in range(len(all_dict)):\n",
+    "    print(f\"folder 0{i+1} count : {len(all_dict[i])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# json 으로 만들기.\n",
+    "with open(os.path.expanduser(save_dir+\"/pair.json\"), 'w', encoding='utf-8') as file:\n",
+    "    # json.dump(all_dict, file)\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### json 안에 내용 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_list = {}\n",
     "\n",
+    "for index, number in enumerate(numbers):\n",
+    "    \n",
+    "    json_root,_,json_list = next(os.walk(os.path.join(json_dir_name+number)))\n",
+    "    tiff_root,_,tiff_list = next(os.walk(os.path.join(tiff_dir_name+number)))    \n",
+    "    json_list.sort() \n",
+    "    tiff_list.sort()\n",
+    "    \n",
+    "    if len(tiff_list) == 0: continue\n",
+    "    \n",
+    "    for tiff_file in tiff_list:\n",
+    "        json_file,id = all_dict[index].get(tiff_file)\n",
+    "        \n",
+    "        # json 불러와서 새로운 json format 만들기\n",
+    "        with open(os.path.expanduser(json_root+\"/\"+json_file), 'r', encoding='utf-8') as f:\n",
+    "            img_shape = cv2.imread(tiff_root+\"/\"+tiff_file)\n",
+    "            height, width,_ = img_shape.shape\n",
+    "    \n",
+    "            data = json.load(f)\n",
+    "            \n",
+    "            json_data = {}\n",
+    "            json_data['images'] = {'id':id,\"width\":width,\"height\":height,\"file_name\":id+\".tiff\"}\n",
+    "            json_data['labels'] = []\n",
+    "            try:\n",
+    "                for box_info in data['labels']:\n",
+    "                    label = box_info['label']\n",
+    "                    \n",
+    "                    box_info = box_info['boundingPoly']['vertices']\n",
+    "                    \n",
+    "                    xmin = box_info[0]['x']\n",
+    "                    xmax = box_info[2]['x']\n",
+    "                    ymin = box_info[0]['y']\n",
+    "                    ymax = box_info[2]['y']\n",
+    "                    \n",
+    "                    coordinate = [{\"xmin\":xmin,\"ymin\":ymin,\"xmax\":xmax,\"ymax\":ymax}]\n",
+    "                    json_data['labels'].append({\"label\": label, \"boundingPloy\":{\"type\":\"RECT\", \"vertices\":coordinate}})\n",
+    "            except KeyError:\n",
+    "                error_list[id] = [number, tiff_file, json_file]\n",
     "\n",
-    "    idx = json_name_check(data_id, json_list)\n",
-    "    json_name = json_list[idx]\n",
-    "    print(json_name)\n",
-    "    target_path = os.path.join(json_dir_name, json_name)\n",
-    "    print(target_path)\n",
-    "    with open(target_path, \"r\") as box_j :\n",
-    "        cjson = json.load(box_j)\n",
+    "        # 새로운 json format 저장하기\n",
+    "        with open(os.path.expanduser(json_root+\"/modify/\"+id+\".json\"), 'w', encoding='utf-8') as f:\n",
+    "            json.dump(json_data,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 에러 파일들 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_list\n",
+    "with open(os.path.expanduser(\"./korad_boxes/error_list.json\"), 'w', encoding='utf-8') as f:\n",
+    "    json.dump(error_list,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### json & tiff 이름 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, number in enumerate(numbers):\n",
+    "    \n",
+    "    json_root,_,json_list = next(os.walk(os.path.join(json_dir_name+number)))\n",
+    "    tiff_root,_,tiff_list = next(os.walk(os.path.join(tiff_dir_name+number)))    \n",
+    "    json_list.sort() \n",
+    "    tiff_list.sort()\n",
+    "    \n",
+    "    if len(tiff_list) == 0: continue\n",
+    "    \n",
+    "    for tiff_file in tiff_list:\n",
+    "        json_file,id = all_dict[index].get(tiff_file)\n",
+    "        print(f\"tiff_file : {tiff_file}\")\n",
+    "        print(f\"json_file : {json_file}\")\n",
+    "        print(f\"id : {id}\")\n",
+    "        # os.rename(json_root+\"/\"+tiff_file,json_root+\"/\"+id+\".json\")\n",
+    "        # os.rename(tiff_root+\"/\"+json_file,tiff_root+\"/\"+id+\".tiff\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for number in os.listdir(tiff_dir_name):\n",
+    "    if number != \"07\":continue\n",
+    "    json_root,_,json_list = next(os.walk(os.path.join(json_dir_name+number)))\n",
+    "    tiff_root,_,tiff_list = next(os.walk(os.path.join(tiff_dir_name+number)))    \n",
+    "    json_list.sort()\n",
+    "    tiff_list.sort()\n",
     "\n",
-    "    img = cv2.imread(os.path.join(tiff_dir_name, img_id))\n",
+    "    for file in tiff_list:\n",
+    "        json_file = pair_dict.get(file)\n",
+    "        \n",
+    "        with open(json_root+\"/\"+json_file, \"r\") as box_j :\n",
+    "            cjson = json.load(box_j)\n",
     "\n",
-    "    for box_info in cjson['labels']:\n",
-    "        cls = box_info['label']\n",
-    "        # print(box_info['boundingPoly']['vertices'])\n",
+    "        img = cv2.imread(os.path.join(tiff_root+\"/\"+file))\n",
+    "        \n",
+    "        for box_info in cjson['labels']:\n",
+    "            cls = box_info['label']\n",
     "\n",
-    "        color_idx = classes.index(cls)\n",
-    "        color = colors[color_idx]\n",
-    "        box_info['boundingPoly']['vertices']\n",
-    "        # print(box_info['boundingPoly']['vertices'][0])\n",
+    "            color_idx = classes.index(cls)\n",
+    "            color = colors[color_idx]\n",
+    "            box_info['boundingPoly']['vertices']\n",
     "\n",
-    "        # jsonbox = obj.find('bndbox')\n",
-    "        xmin = box_info['boundingPoly']['vertices'][0]['x']\n",
-    "        xmax = box_info['boundingPoly']['vertices'][2]['x']\n",
-    "        ymin = box_info['boundingPoly']['vertices'][0]['y']\n",
-    "        ymax = box_info['boundingPoly']['vertices'][2]['y']\n",
-    "        img = cv2.rectangle(img, (int(xmin), int(ymin)), (int(xmax), int(ymax)), color, 3)\n",
+    "            xmin = box_info['boundingPoly']['vertices'][0]['x']\n",
+    "            xmax = box_info['boundingPoly']['vertices'][2]['x']\n",
+    "            ymin = box_info['boundingPoly']['vertices'][0]['y']\n",
+    "            ymax = box_info['boundingPoly']['vertices'][2]['y']\n",
+    "            img = cv2.rectangle(img, (int(xmin), int(ymin)), (int(xmax), int(ymax)), color, 3)\n",
     "\n",
-    "    cv2.imwrite(os.path.join(save_dir, img_id.replace('.tiff', '.png')), img)\n",
-    "    break\n"
+    "        cv2.imshow(\"image\",img)\n",
+    "        cv2.waitKey(0)\n",
+    "        cv2.destroyAllWindows()\n",
+    "        # cv2.imwrite(os.path.join(save_dir, file.replace('.tiff', '.png')), img)\n",
+    "        break"
    ]
   },
   {
