--- a/src/data/make_korad.ipynb
+++ b/src/data/make_korad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data hunt format(4 points[x,y])\n",
     "c1_path = os.path.expanduser(\"~/Desktop/joo/data/korad/manager/\") # annotation (xml), images \n",
     "\n",
-    "ai_hub_path = os.path.expanduser(\"~/Desktop/joo/data/korad/data/\")\n",
+    "ai_hub_path = os.path.expanduser(\"~/Desktop/joo/data/korad/data/origin\")\n",
     "ai_hub_type = [\"images/\",\"labeling/\"] # 01 ~ 06 (json) / cf. 01 is empty"
    ]
   },
@@ -36,9 +36,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "folder 03 start!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning!] folder 03 have already done!\n",
+      "======================================\n",
+      "folder 05 start!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning!] folder 05 have already done!\n",
+      "======================================\n",
+      "folder 02 start!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3900it [00:00, 143021.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "folder 01 start!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "folder 06 start!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning!] folder 06 have already done!\n",
+      "======================================\n",
+      "folder 04 start!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Warning!] folder 04 have already done!\n",
+      "======================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for number in os.listdir(ai_hub_path+ai_hub_type[1]):\n",
     "    path = ai_hub_path+ai_hub_type[1]+number+'/'\n",
@@ -51,7 +157,7 @@
     "            print(f\"[Warning!] folder {number} have already done!\\n======================================\")\n",
     "            break\n",
     "\n",
-    "        # os.rename(path+file,path+file[:-9]+\"json\")"
+    "        os.rename(path+file,path+file[:-9]+\"json\")"
    ]
   },
   {
@@ -63,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -77,22 +183,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3900it [00:00, 422245.37it/s]\n"
+      "3900it [00:00, 8605.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "907\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "path,_,c1_files = next(os.walk(os.path.join(c1_path+\"annotation/\"))) # annotation, json\n",
+    "img_path,_,c1_img_files = next(os.walk(os.path.join(c1_path+\"images/\"))) # annotation, json\n",
     "c1_files.sort()\n",
-    "\n",
-    "img_path,_,c1_img_files = next(os.walk(os.path.join(c1_path+\"images/\")))\n",
     "c1_img_files.sort()\n",
     "\n",
     "print(f\"c1_ano : {len(c1_files)}, c1_img : {len(c1_img_files)}\")\n",
     "empty_list = {}\n",
     "\n",
     "for index, file in tqdm(enumerate(c1_img_files)):\n",
-    "\n",
+    "    save_file_name = file\n",
+    "    file = \"C1\"+file[file.index('_'):]\n",
+    "    \n",
     "    if os.path.exists(path+\"C1\"+file[file.index('_'):-4]+\".xml\") == False:\n",
     "        empty_list[file[:-4]] = [\"01\",file, file[:-4]+\".xml\"]\n",
     "        continue\n",
@@ -101,8 +222,9 @@
     "    #     empty_list[file[:-4]] = [\"01\",file, file[:-4]+\".json\"]\n",
     "    #     continue\n",
     "\n",
-    "    continue # 제거하면 json 파일 만듬\n",
+    "    # continue # 제거하면 json 파일 만듬\n",
     "    file = file[:-4]+\".xml\"\n",
+    "    \n",
     "    root = Et.parse(open(os.path.join(path, file), \"r\")).getroot()\n",
     "\n",
     "    filename = root.find(\"filename\").text\n",
@@ -125,10 +247,11 @@
     "        ymax = int(bndbox.find(\"ymax\").text)\n",
     "        \n",
     "        coordinate = [{\"xmin\":xmin,\"ymin\":ymin,\"xmax\":xmax,\"ymax\":ymax}]\n",
-    "        json_data['labels'].append({\"label\": name, \"boundingPloy\":{\"type\":\"RECT\", \"vertices\":coordinate}})\n",
+    "        json_data['labels'].append({\"label\": name, \"boundingPoly\":{\"type\":\"RECT\", \"vertices\":coordinate}})\n",
     "    \n",
-    "    with open(os.path.expanduser(c1_path+\"json/\"+file[:-4]+\".json\"), 'w', encoding='utf-8') as file:\n",
-    "        json.dump(json_data, file)\n"
+    "    with open(os.path.expanduser(c1_path+\"json/\"+save_file_name[:-4]+\".json\"), 'w', encoding='utf-8') as file:\n",
+    "        json.dump(json_data, file)\n",
+    "print(len(empty_list))"
    ]
   },
   {
@@ -156,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ai_img = cv2.imread(os.path.expanduser(\"~/Desktop/joo/data/korad/data/images/01/101_6a1d3941-0615-11ec-919c-a85e4515a1df.tiff\"))\n",
+    "ai_img = cv2.imread(os.path.expanduser(\"~/Desktop/joo/data/korad/data/origin/images/01/101_6a1d3941-0615-11ec-919c-a85e4515a1df.tiff\"))\n",
     "\n",
     "manager_img = cv2.imread(os.path.expanduser(\"~/Desktop/joo/data/korad/manager/images/C1_00232.jpg\"))"
    ]
