--- a/src/data/make_korad_json.ipynb
+++ b/src/data/make_korad_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "            pair_dict[tiff_file] = [json_file,\"C\"+number+\"_\"+str(index).zfill(5)]\n",
     "            # pair_dict[\"C\"+number+\"_\"+str(index).zfill(5)] = [number,tiff_file,json_file,]\n",
     "            \n",
-    "    all_dict[number] = pair_dict\n"
+    "    all_dict[number] = pair_dict"
    ]
   },
   {
@@ -176,8 +176,8 @@
     "\n",
     "        # 새로운 json format 저장하기\n",
     "        # print(save_path+number+\"/\"+id+\".json\")\n",
-    "        with open(os.path.expanduser(save_path+number+\"/\"+id+\".json\"), 'w', encoding='utf-8') as f:\n",
-    "            json.dump(json_data,f)"
+    "        # with open(os.path.expanduser(save_path+number+\"/\"+id+\".json\"), 'w', encoding='utf-8') as f:\n",
+    "        #     json.dump(json_data,f)"
    ]
   },
   {
