--- a/src/data/show_korad.ipynb
+++ b/src/data/show_korad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/joo/Desktop/joo/data/korad/data/custom/labeling/01\n",
+      "/home/joo/Desktop/joo/data/korad/data/custom/images/01\n"
+     ]
+    }
+   ],
    "source": [
     "all_dict = {}\n",
     "folder_dict = {}\n",
@@ -76,6 +85,7 @@
     "    json_list.sort()\n",
     "    tiff_list.sort()\n",
     "    slicing_num = -5\n",
+    "\n",
     "    if number == \"01\":\n",
     "        test_tiff_list = set(map(lambda x : x.split(\".jpg\")[0], tiff_list))\n",
     "        test_json_list = set(map(lambda x : x.split(\".json\")[0], json_list))    \n",
@@ -91,7 +101,7 @@
     "            result.index(tiff_file[:slicing_num])\n",
     "            all_dict[tiff_file[:slicing_num]] = [number, tiff_file, None]\n",
     "            temp_dict[tiff_file[:slicing_num]] = [number, tiff_file, None]\n",
-    "        except ValueError:\n",
+    "        except ValueError:            \n",
     "            all_dict[tiff_file[:slicing_num]] = [number, tiff_file, tiff_file[:slicing_num]+\".json\"]\n",
     "            temp_dict[tiff_file[:slicing_num]] = [number, tiff_file, tiff_file[:slicing_num]+\".json\"]\n",
     "    folder_dict[number] = temp_dict\n",
