complete custom data preprocess

--- a/src/data/make_korad_json.ipynb
+++ b/src/data/make_korad_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "        index += 1\n",
     "        for json_file in json_list:\n",
     "            if json_file.find(tiff_file[:-5]) == -1 : continue\n",
-    "            pair_dict[tiff_file] = [json_file,\"C\"+number+\"_\"+str(index).zfill(5)]\n",
+    "            pair_dict[tiff_file] = [number, json_file,\"C\"+number+\"_\"+str(index).zfill(5)]\n",
     "            # pair_dict[\"C\"+number+\"_\"+str(index).zfill(5)] = [number,tiff_file,json_file,]\n",
     "            \n",
     "    all_dict[number] = pair_dict"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,23 +130,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-e66dbf5382fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m# json 불러와서 새로운 json format 만들기\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpanduser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_root\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mjson_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mimg_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtiff_root\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mtiff_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m             \u001b[0mheight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg_shape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "error_list = {}\n",
     "\n",
     "for index, number in enumerate(numbers):\n",
     "    \n",
     "    json_root,_,json_list = next(os.walk(os.path.join(json_dir_name+number)))\n",
-    "    tiff_root,_,tiff_list = next(os.walk(os.path.join(tiff_dir_name+number)))    \n",
+    "    tiff_root,_,tiff_list = next(os.walk(os.path.join(tiff_dir_name+number)))\n",
+    "     \n",
     "    json_list.sort() \n",
     "    tiff_list.sort()\n",
     "    \n",
     "    if len(tiff_list) == 0: continue\n",
     "    \n",
     "    for tiff_file in tiff_list:\n",
-    "        json_file,id = all_dict[number].get(tiff_file)\n",
+    "        number, json_file,id = all_dict[number].get(tiff_file)\n",
+    "        # print(number, json_file, id)\n",
+    "        # break\n",
     "        \n",
     "        # json 불러와서 새로운 json format 만들기\n",
     "        with open(os.path.expanduser(json_root+\"/\"+json_file), 'r', encoding='utf-8') as f:\n",
@@ -173,7 +188,7 @@
     "                    json_data['labels'].append({\"label\": label, \"boundingPoly\":{\"type\":\"RECT\", \"vertices\":coordinate}})\n",
     "            except KeyError:\n",
     "                error_list[id] = [number, tiff_file, json_file]\n",
-    "\n",
+    "        \n",
     "        # 새로운 json format 저장하기\n",
     "        # print(save_path+number+\"/\"+id+\".json\")\n",
     "        # with open(os.path.expanduser(save_path+number+\"/\"+id+\".json\"), 'w', encoding='utf-8') as f:\n",
@@ -194,8 +209,8 @@
    "outputs": [],
    "source": [
     "error_list\n",
-    "with open(os.path.expanduser(\"./korad_boxes/error_list.json\"), 'w', encoding='utf-8') as f:\n",
-    "    json.dump(error_list,f)"
+    "# with open(os.path.expanduser(\"./korad_boxes/error_list.json\"), 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(error_list,f)"
    ]
   },
   {
