--- a/src/data/make_korad_txt.ipynb
+++ b/src/data/make_korad_txt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import os\n",
     "import glob\n",
     "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import tqdm"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
-    "random.seed(10)\n",
+    "np.random.seed(2)\n",
     "\n",
     "root_path = os.path.expanduser(\"~/Desktop/joo/data/korad/data/custom/\")\n",
-    "labels = list(set(map(lambda x : x[-13:-4] if x[-4:]==\".jpg\" else x[-14:-5],glob.glob(root_path+\"images/*/*\"))))\n",
+    "label_set = set(map(lambda x : x[-13:-4] if x[-4:]==\".jpg\" else x[-14:-5],glob.glob(root_path+\"images/*/*\")))\n",
+    "labels = list(label_set)\n",
     "random.shuffle(labels)"
    ]
   },
@@ -74,91 +76,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./korad_boxes/all_list.json\", \"r\") as f:\n",
+    "    all_dict = json.load(f)\n",
+    "    train_ratio = 0.82\n",
+    "    val_ratio = 0.15\n",
+    "    test_ratio = 0.03\n",
+    "\n",
+    "    train_set = 0\n",
+    "    val_set = 0\n",
+    "    test_set = 0\n",
+    "    \n",
+    "    error_set = 0\n",
+    "\n",
+    "    for index, data_id in enumerate(all_dict.keys()):\n",
+    "        # if index == 10 : break\n",
+    "            \n",
+    "        rd_num = np.random.random()\n",
+    "        \n",
+    "        _, _, json_true = all_dict[data_id]\n",
+    "        \n",
+    "        if json_true == None :rd_num = 1\n",
+    "        \n",
+    "        if rd_num < train_ratio :\n",
+    "            train_set += 1\n",
+    "            datatype = [\"train\"]\n",
+    "\n",
+    "        elif rd_num < train_ratio + val_ratio:\n",
+    "            val_set += 1\n",
+    "            datatype = [\"val\"]\n",
+    "        else :\n",
+    "            if rd_num == 1 : error_set += 1\n",
+    "            test_set += 1\n",
+    "            datatype = [\"test\"]\n",
+    "        all_dict[data_id] = all_dict[data_id] + datatype\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18790\n",
-      "3440\n",
-      "1170\n"
+      "train_set : 18421개 (0.79%)\n",
+      "val_set : 3419개 (0.15%)\n",
+      "test_set : 646 + 914(error file) = 1560개 (0.07%)\n"
      ]
     }
    ],
    "source": [
-    "with open(\"./korad_boxes/all_list.json\", \"r\") as f:\n",
-    "    all_dict = json.load(f)\n",
-    "    train_ratio = 0.8\n",
-    "    val_ratio = 0.15\n",
-    "    test_ratio = 0.05\n",
-    "\n",
-    "    train_set = 0\n",
-    "    val_set = 0\n",
-    "    test_set = 0\n",
-    "\n",
-    "    for data_id in all_dict.keys():\n",
-    "        rd_num = random.random()\n",
-    "        if rd_num < train_ratio :\n",
-    "            train_set += 1\n",
-    "            datatype = 'train'\n",
-    "        elif rd_num < train_ratio + val_ratio:\n",
-    "            val_set += 1\n",
-    "            datatype = 'val'\n",
-    "        else :\n",
-    "            test_set += 1\n",
-    "            datatype = 'test'\n",
-    "\n",
-    "    print(train_set)\n",
-    "    print(val_set)\n",
-    "    print(test_set)\n"
+    "print(f\"train_set : {train_set}개 ({train_set/23400:.2f}%)\")\n",
+    "print(f\"val_set : {val_set}개 ({val_set/23400:.2f}%)\")\n",
+    "print(f\"test_set : {test_set - error_set} + {error_set}(error file) = {test_set}개 ({test_set/23400:.2f}%)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bbox -> yolo bbox\n",
-    "for index, file in enumerate(labels):\n",
-    "    number, img_file, json_file_name = all_dict[file]\n",
+    "classes = [\"ConcreteCrack\", \"AlligatorCrack\",\"Spalling\", \"Efflorescene\", \"Exposure\"]\n",
+    "year = \"2022\"\n",
+    "save_path = [\"train\",\"val\",\"test\"]\n",
     "\n",
-    "    if json_file_name == None:\n",
-    "        pass\n",
+    "# txt 초기화\n",
+    "for write_type in save_path:\n",
+    "    with open(root_path+write_type+year+\".txt\", \"w\") as file: file.writelines(\"\")\n",
+    "\n",
+    "# txt in labels\n",
+    "for index, file in enumerate(labels):\n",
+    "    \n",
+    "    number, img_file, json_file_name, data_type = all_dict[file]\n",
+    "\n",
+    "    with open(root_path+data_type+year+\".txt\", \"a\") as file: \n",
+    "            file.writelines(\"./images/\"+number+\"/\"+img_file+\"\\n\")\n",
+    "\n",
+    "    if json_file_name == None: continue\n",
     "    \n",
     "    with open(root_path+\"labeling/\"+number+\"/\"+json_file_name, \"r\") as f: json_file = json.load(f)\n",
+    "\n",
+    "    width = json_file['images']['width']\n",
+    "    height = json_file['images']['height']\n",
+    "    save_true = True\n",
+    "\n",
+    "    for label in json_file['labels']:\n",
+    "        class_num = str(classes.index(label['label']))\n",
+    "        xmin = label['boundingPoly']['vertices'][0]['xmin']\n",
+    "        ymin = label['boundingPoly']['vertices'][0]['ymin']\n",
+    "        xmax = label['boundingPoly']['vertices'][0]['xmax']\n",
+    "        ymax = label['boundingPoly']['vertices'][0]['ymax']\n",
+    "\n",
+    "        bb = convert((width,height),(xmin,xmax,ymin,ymax))\n",
     "        \n",
-    "    print(json_file)        \n",
-    "    break\n",
-    "    # 저장 어따 할레????\n",
-    "    # with open(\"pre_pro/\"+type+xml_file[:-4]+\".txt\", \"w\") as file:\n",
-    "    #     file.writelines(\"0 \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \")\n"
+    "        if save_true:\n",
+    "            with open(root_path+\"labels/\"+data_type+year+\"/\"+json_file_name[:-5]+\".txt\", \"w\") as file:\n",
+    "                file.writelines(class_num + \" \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \\n\")\n",
+    "            save_true = False\n",
+    "        else:\n",
+    "            with open(root_path+\"labels/\"+data_type+year+\"/\"+json_file_name[:-5]+\".txt\", \"a\") as file:\n",
+    "                file.writelines(class_num + \" \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \\n\")\n",
+    "    # break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18412 3461 617 910 1527 23400\n",
+      "23400\n",
+      "22486\n",
+      "910\n",
+      "{'C03_02787', 'C05_03486', 'C03_01098', 'C03_00711'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# coco 처럼 train2022.txt, val2022.txt, test2022.txt 3개의 파일 만들기\n",
-    "# # bbox -> yolo bbox\n",
-    "year = \"2022\"\n",
+    "a,b,c_1,c_2 = 0,0,0,0\n",
+    "for id in all_dict:\n",
+    "    _,_,json_ty,ty = all_dict[id]\n",
+    "    if ty == \"train\": a += 1\n",
+    "    elif ty == \"val\": b += 1\n",
+    "    elif ty == \"test\" : \n",
+    "        if json_ty != None:\n",
+    "            c_1 += 1\n",
+    "            continue\n",
+    "        c_2 += 1\n",
     "\n",
-    "for type in type_path:\n",
-    "    img_root, img_dir, img_files = next(os.walk(os.path.join(root_path+type+jpg_anno_path[1])))\n",
-    "    img_files.sort()\n",
+    "print(a,b,c_1,c_2, c_1+c_2, a+b+c_1+c_2)\n",
     "\n",
-    "    for index, img_file in enumerate(img_files):\n",
-    "        if index == 0:\n",
-    "            with open(\"temp/\"+type[:-1]+year+\".txt\", \"w\") as file:\n",
-    "                file.write(\"./images/\"+type[:-1]+year+\"/\"+img_file)\n",
-    "                continue\n",
-    "        \n",
-    "        with open(\"temp/\"+type[:-1]+year+\".txt\", \"a\") as file:\n",
-    "            file.write(\"\\n./images/\"+type[:-1]+year+\"/\"+img_file)         \n"
+    "temp_set = set(map(lambda x : x[-13:-4] , glob.glob(root_path+\"labels/*/*\")))\n",
+    "print(len(label_set))\n",
+    "print(len(temp_set))\n",
+    "\n",
+    "temp_err = label_set - temp_set\n",
+    "temp_dict = set()\n",
+    "\n",
+    "with open(os.path.expanduser(\"./korad_boxes/error_list.json\"), \"r\") as f: \n",
+    "    json_file = json.load(f)\n",
+    "    for i in json_file.keys(): \n",
+    "        temp_dict.add(i)\n",
+    "\n",
+    "with open(os.path.expanduser(\"./korad_boxes/error_list2.json\"), \"r\") as f: \n",
+    "    json_file = json.load(f)\n",
+    "    for i in json_file.keys(): \n",
+    "        temp_dict.add(i)        \n",
+    "print(len(temp_dict))\n",
+    "\n",
+    "print(temp_err - temp_dict)\n"
    ]
   }
  ],
